--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a href="acceuil.html" class="nav-link" data-page="acceuil">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link" data-page="projets">Projets</a></li>
                     <li class="nav-item"><a href="contact.php" class="nav-link" data-page="contact">Contact</a></li>
+                    <li class="nav-item"><a href="cours.html" class="nav-link" id="cours" data-page="cours">Aide cours</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,11 +43,11 @@
         </div>
     
         <div class="button-container">
-            <a class="linkedIn_btn" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile">
+            <a class="linkedIn_btn" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank">
                 <img src="icons/linkedin.png" alt="LinkedIn">
             </a>
             
-            <a class="github_btn" href="https://github.com/D4L1IR3Tr0">
+            <a class="github_btn" href="https://github.com/D4L1IR3Tr0" target="_blank">
                 <img src="icons/github.png" alt="GitHub">
             </a>
         </div>
