--- a/projets.html
+++ b/projets.html
@@ -48,6 +48,28 @@
                     </div>
                 </div>
 
+                <div class="project-item" data-category="network">
+                    <h3 class="project-title">Port Patrol</h3>
+                    <div class="category-tags">
+                        <span class="category-tag_RES">reseau</span>
+                    </div>
+                    <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
+                    <div class="project_btn_container">
+                        <a href="projets/portpatrol.html" class="project_btn" data-page="projets/portpatrol">Voir le projet</a>
+                    </div>
+                </div>
+
+                <div class="project-item" data-category="pentesting">
+                    <h3 class="project-title">DDOSER</h3>
+                    <div class="category-tags">
+                        <span class="category-tag_PT">pentesting</span>
+                    </div>
+                    <p class="project-description"></p> <!-- AJOUTER UNE DESCRIPTION -->
+                    <div class="project_btn_container">
+                        <a href="projets/ddoser.html" class="project_btn" data-page="projets/ddoser">Voir le projet</a>
+                    </div>
+                </div>
+
                 <div class="project-item" data-category="simulation">
                     <h3 class="project-title">SIMULATEUR PSEUDO ALÉATOIRE D’UNE POPULATION DE LAPINS</h3>
                     <div class="category-tags">
