--- a/projets.html
+++ b/projets.html
@@ -7,7 +7,7 @@
                     <button class="filter-btn active" onclick="filterSelection('all', this)">Tous</button>
                     <button class="filter-btn" onclick="filterSelection('game', this)">Jeux Vidéo</button>
                     <button class="filter-btn" onclick="filterSelection('simulation', this)">Simulation</button>
-                    <button class="filter-btn" onclick="filterSelection('software', this)">Logiciel</button>
+                    <!--<button class="filter-btn" onclick="filterSelection('software', this)">Logiciel</button>-->
                     <button class="filter-btn" onclick="filterSelection('hardware', this)">Matériel/Robotique</button>
                     <button class="filter-btn" onclick="filterSelection('web', this)">Web</button>
                     <button class="filter-btn" onclick="filterSelection('pentesting', this)">Pentesting</button>
@@ -194,6 +194,16 @@
                     <p class="project-description"> Ce projet de reverse shell en Go offre une variété de fonctionnalités permettant de contrôler et manipuler un système cible de manière efficace. Bien que certaines fonctionnalités ne soient pas encore implémentées, les commandes disponibles fournissent déjà une large gamme d'outils pour la gestion à distance d'une machine compromise</p>
                     <div class="project_btn_container">
                         <a href="projets/zeroShell.html" class="project_btn" data-page="projets/zeroShell">Voir le projet</a>
+                    </div>
+                </div>
+                <div class="project-item" data-category="other">
+                    <h3 class="project-title">Wave Cypher</h3>
+                    <div class="category-tags">
+                        <span class="category-tag_PT">Autre</span>
+                    </div>
+                    <p class="project-description"> Ce projet de programme d'encodage MP3 en Go permet de dissimuler des messages dans des fichiers audio de manière discrète, avec une option de chiffrement AES-128 pour renforcer la sécurité. Les fonctionnalités d'encodage et de décodage offrent un moyen simple mais efficace de protéger et transmettre des informations sensibles.</p>
+                    <div class="project_btn_container">
+                        <a href="projets/waveCypher.html" class="project_btn" data-page="projets/waveCypher">Voir le projet</a>
                     </div>
                 </div>
             </div>
