--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,6 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="main.css">
     <link rel="icon" type="image/png" href="images/logoBackground.jpg">
-    <script src="script.js"></script>
-    <script src="game.js"></script>
-    <script src="projet.js"></script>
     
 </head>
 <body>
@@ -24,7 +21,7 @@
                 <ul class="nav-list">
                     <li class="nav-item"><a href="acceuil.html" class="nav-link" data-page="acceuil">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link" data-page="projets">Projets</a></li>
-                    <li class="nav-item"><a href="contact.php" class="nav-link" data-page="contact">Contact</a></li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link" data-page="contact">Contact</a></li>
                     <li class="nav-item"><a href="cours.html" class="nav-link" id="cours" data-page="cours">Aide cours</a></li>
                 </ul>
             </nav>
@@ -62,4 +59,10 @@
 </div>
     
 </body>
+
+<script src="projet.js"></script>
+<script type="text/javascript"src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+<script src="script.js"></script>
+<scirpt src="contact.js"></scirpt>
+
 </html>
