--- a/contact.html
+++ b/contact.html
@@ -1,28 +1,13 @@
-<script src="https://www.google.com/recaptcha/enterprise.js?render=6LcGlXsqAAAAAEJUOsZaqdgNHJJ34xwNpSrIjOSg"></script>
-
-<section id="contact" class="contact-section">
-    <div class="container">
-        <h2 class="section-title">Contactez-moi</h2>
-        <form class="contact-form" id="contactForm">
-            <div class="form-group">
-                <label for="name">Nom</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Message</label>
-                <textarea id="message" name="message" required></textarea>
-            </div>
-            <div class="form-button">
-                <button type="submit" class="submit-button">Envoyer</button>
-            </div>
-        </form>
-        <div id="formMessage"></div> <!-- Feedback message -->
+<form class="contact-form" method="post" id="contactForm">
+    <div class="form-group">
+        <label for="name">Nom</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
     </div>
-</section>
-
-<!-- Include EmailJS library -->
-<script type="text/javascript" 
-src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-</script>
-
-<script src="contact.js"></script>
+    <div class="form-button">
+        <button type="submit" class="submit-button">Envoyer</button>
+    </div>
+</form>
