--- a/Index.html
+++ b/Index.html
@@ -22,6 +22,7 @@
                     <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Calculatrice IP</a></li>
                 </ul>
             </nav>
         </div>
