--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             <h2 class="site-title2">Mohamed Ali Damergi</h2>
             <nav class="site-nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="index.html" class="nav-link">Accueil</a></li>
+                    <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     <li class="nav-item"><a href="ipcalc.html" class="nav-link">Calculatrice IP</a></li>
