--- a/ipcalc.html
+++ b/ipcalc.html
@@ -23,7 +23,7 @@
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="ipcalc.html" class="nav-link active">Calculatrice IP</a></li>
+                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Outils</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,6 +32,7 @@
     <section id="ipcalc" class="ipcalc-section">
     
     <form id="ipcalcForm">
+        <h2 class="section-title">Calculatrice d'adresses IP</h2>
         <label for="ip" id="label-ip">Adresse IP :</label>
         <input type="text" id="ip" placeholder="Exemple : 192.168.1.10" required>
         <br><br>
