--- a/projets.html
+++ b/projets.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="projets.css">
     <link rel="stylesheet" href="HF.css">
+    <link rel="stylesheet" href="projetA.css">
     <link rel="icon" type="image/png" href="images/logoBackground.jpg">
     
 </head>
@@ -23,7 +24,7 @@
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link active">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Calculatrice IP</a></li>
+                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Outils</a></li>
                 </ul>
             </nav>
         </div>
