--- a/projets/waveCypher.html
+++ b/projets/waveCypher.html
@@ -1,7 +1,7 @@
 <div class="projet">
 
     <div class="titleimg">
-        <img class="projet-img-title" src="images/wavecypher/title.png">
+        <img class="projet-img-title" src="images/waveCypher/title.png">
     </div>
 
     <h2 class="projet-titles">Introduction</h2>
