--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,11 @@
         <div class="header_container">
             <h2 class="site-title2">Mohamed Ali Damergi</h2>
             <nav class="site-nav">
+                <button class="hamburger" type="button">
+                    <span class="hamburger-box">
+                      <span class="hamburger-inner"></span>
+                    </span>
+                  </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link">Projets</a></li>
@@ -80,5 +85,6 @@
 
 <script src="contact.js"></script>
 <script src="script.js"></script>
+<script src="hamburger.js"></script>
 
 </html>
