--- a/ipcalc.html
+++ b/ipcalc.html
@@ -19,11 +19,16 @@
         <div class="header_container">
             <h2 class="site-title2">Mohamed Ali Damergi</h2>
             <nav class="site-nav">
+                <button class="hamburger" type="button">
+                    <span class="hamburger-box">
+                      <span class="hamburger-inner"></span>
+                    </span>
+                  </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Outils</a></li>
+                    <li class="nav-item"><a href="ipcalc.html" class="nav-link active">Outils</a></li>
                 </ul>
             </nav>
         </div>
@@ -85,5 +90,6 @@
 
     <script src="ipcalcscript.js"></script>
     <script src="script.js"></script>
+    <script src="hamburger.js"></script>
 
 </html>
