--- a/projets.html
+++ b/projets.html
@@ -20,6 +20,11 @@
         <div class="header_container">
             <h2 class="site-title2">Mohamed Ali Damergi</h2>
             <nav class="site-nav">
+                <button class="hamburger" type="button">
+                    <span class="hamburger-box">
+                      <span class="hamburger-inner"></span>
+                    </span>
+                  </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link active">Projets</a></li>
@@ -284,6 +289,7 @@
 
 <script src="projet.js"></script>
 <script src="script.js"></script>
+<script src="hamburger.js"></script>
 
 <script>
 
