--- a/Index.html
+++ b/Index.html
@@ -96,7 +96,7 @@
                             </div>
                         
                             <div class="skill-bar">
-                                <span>SHELL</span>
+                                <span>SHELL (bash Zshell)</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 80%;"></div>
                                 </div>
