--- a/Index.html
+++ b/Index.html
@@ -61,7 +61,7 @@
                         <!-- Skill Bars -->
                         <div class="skills-container">
                             <div class="skill-bar">
-                                <span>ADA-L (Ce serait le comble étant donné que c'est un langage que j'ai créé)</span>
+                                <span>BING (Ce serait le comble étant donné que c'est un langage que j'ai créé)</span>
                                 <div class="progress">
                                     <div class="progress-bar" style="width: 100%;"></div>
                                 </div>
