--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
             <h2 class="section-title">Bienvenue sur mon portfolio</h2>
             <p class="section-description">Découvrez mes projets et mon parcours professionnel et extraprofessionnel.</p>
 
-            <p class="section-description" style="font-size: 26px;"><br>! Ce site est encore en cours de construction. !</p>
+        <!--    <p class="section-description" style="font-size: 26px;"><br>! Ce site est encore en cours de construction. !</p> -->
     
             <div class="about-summary">
                 <h2 class="section-title">À propos de moi</h2>
