--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,11 @@
     </header>
 
 <section id="contact" class="contact-section">
+    <div class="contacts">
+        <p>La bande passante etant faible je vous invite plutot a me contacter directement par email plutot que par le mailer du site.</p>
+        <p>dalidamergi.com</p>
+            
+    </div>
     <div class="container">
         <form class="contact-form" id="contactForm">
             <div class="form-group">
