--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,19 @@
 
 <section id="contact" class="contact-section">
     <div class="contacts">
-        <p>La bande passante etant faible je vous invite plutot a me contacter directement par email plutot que par le mailer du site.</p>
-        <p>dalidamergi.com</p>
+
+        <p><strong>📢 Information importante</strong><br>
+En raison d'une bande passante limitée, je vous recommande de me contacter directement par email plutôt que via le formulaire du site.</p>
+
+<p><strong>✉️ Email professionnel :</strong> 
+    <span style="color: #007bff; font-weight: bold;">mohamed-ali.damergi@etu.univ-lyon1.fr</span>
+</p>
+
+<p><strong>📩 Email personnel :</strong> 
+    <span style="color: #28a745; font-weight: bold;">dalidamergi@gmail.com</span>
+</p>
+
+
             
     </div>
     <div class="container">
