--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,21 @@
 <section id="contact" class="contact-section">
     <div class="contacts">
 
-        <p><strong>📢 Information importante</strong><br>
+<p><strong>📢 Information importante</strong><br>
 En raison d'une bande passante limitée, je vous recommande de me contacter directement par email plutôt que via le formulaire du site.</p>
 
 <p><strong>✉️ Email professionnel :</strong> 
-    <span style="color: #007bff; font-weight: bold;">mohamed-ali.damergi@etu.univ-lyon1.fr</span>
+    <a href="mailto:mohamed-ali.damergi@etu.univ-lyon1.fr" style="color: #007bff; font-weight: bold; text-decoration: none;">
+        mohamed-ali.damergi@etu.univ-lyon1.fr
+    </a>
 </p>
 
 <p><strong>📩 Email personnel :</strong> 
-    <span style="color: #28a745; font-weight: bold;">dalidamergi@gmail.com</span>
+    <a href="mailto:dalidamergi@gmail.com" style="color: #ff6100; font-weight: bold; text-decoration: none;">
+        dalidamergi@gmail.com
+    </a>
 </p>
+
 
 
             
