--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,13 @@
 En raison d'une bande passante limitée, je vous recommande de me contacter directement par email plutôt que via le formulaire du site.</p>
 
 <p><strong>✉️ Email professionnel :</strong> 
-    <a href="mailto:mohamed-ali.damergi@etu.univ-lyon1.fr" style="color: #007bff; font-weight: bold; text-decoration: none;">
+    <a href="mailto:mohamed-ali.damergi@etu.univ-lyon1.fr" style="color: #007bff; font-weight: bold;">
         mohamed-ali.damergi@etu.univ-lyon1.fr
     </a>
 </p>
 
 <p><strong>📩 Email personnel :</strong> 
-    <a href="mailto:dalidamergi@gmail.com" style="color: #ff6100; font-weight: bold; text-decoration: none;">
+    <a href="mailto:dalidamergi@gmail.com" style="color: #ff6100; font-weight: bold;">
         dalidamergi@gmail.com
     </a>
 </p>
