--- a/projets.html
+++ b/projets.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a href="Index.html" class="nav-link">Accueil</a></li>
                     <li class="nav-item"><a href="projets.html" class="nav-link active">Projets</a></li>
                     <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="nav-item"><a href="ipcalc.html" class="nav-link">Outils</a></li>
+                  <!--  <li class="nav-item"><a href="ipcalc.html" class="nav-link">Outils</a></li> -->
                 </ul>
             </nav>
         </div>
